--- a/Teste/Teste.csproj
+++ b/Teste/Teste.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\clsBase.cs" />
     <Compile Include="Classes\clsConexao.cs" />
     <Compile Include="Classes\clsExcel.cs" />
     <Compile Include="Classes\clsFuncoes.cs" />
